Bug 45746 - [bisected] ION (NVAC) does not work with latest git kernel module
Summary: [bisected] ION (NVAC) does not work with latest git kernel module
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/nouveau (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Nouveau Project
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-07 08:59 UTC by Johannes Obermayr
Modified: 2012-03-01 11:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg (67.11 KB, text/plain)
2012-02-07 08:59 UTC, Johannes Obermayr
no flags Details
Patch (424 bytes, patch)
2012-02-26 14:32 UTC, Emil Velikov
no flags Details | Splinter Review
Latest git master with applied patch (2.75 KB, text/plain)
2012-02-26 15:06 UTC, Johannes Obermayr
no flags Details

Description Johannes Obermayr 2012-02-07 08:59:41 UTC
Created attachment 56714 [details]
dmesg

Screen freezes when loading nouveau.ko module.

drm-next tree built against kernel 3.1.9 works.
Comment 1 Johannes Obermayr 2012-02-26 13:52:23 UTC
Offender:

author	Ben Skeggs <bskeggs@redhat.com>	2012-01-12 05:34:54 (GMT)
committer	 Ben Skeggs <bskeggs@redhat.com>	2012-02-01 05:28:40 (GMT)
commit	5103952cf50e424963ba6f492d0b479b41469498

    drm/nv50-nvc0/vm: support unsnooped system memory

http://cgit.freedesktop.org/nouveau/linux-2.6/commit/?id=5103952cf50e424963ba6f492d0b479b41469498
Comment 2 Emil Velikov 2012-02-26 14:32:35 UTC
Created attachment 57684 [details] [review]
Patch

Can you try the attached patch
Comment 3 Johannes Obermayr 2012-02-26 15:06:02 UTC
Created attachment 57685 [details]
Latest git master with applied patch

The patch fixes the issue.

Please set the bug to RESOLVED/FIXED after push and apply commit SHA.
(For transparency ...)

Thanks a lot.
Comment 4 Emil Velikov 2012-03-01 11:45:13 UTC
commit 08d6d2ba4229a381d9f679e72aaaa0e8e4da87ce
Author: Emil Velikov <emil.l.velikov@gmail.com>
Date:   Mon Feb 27 21:01:41 2012 +0000

    drm/nv50/vm: fix retargeting of igp vram
    
    Commit 'drm/nv50-nvc0/vm: support unsnooped system memory' caused
    a regression on certain nv50 IGP due to not passing the correct
    target type to nv50_vm_addr()
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=45746
    Reported-by: Johannes Obermayr <johannesobermayr@gmx.de>
    Tested-by: Johannes Obermayr <johannesobermayr@gmx.de>
    Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
    Signed-off-by: Ben Skeggs <bskeggs@redhat.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.