drm/nv50/vm: fix retargeting of igp vram

Commit 'drm/nv50-nvc0/vm: support unsnooped system memory' caused
a regression on certain nv50 IGP due to not passing the correct
target type to nv50_vm_addr()

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=45746
Reported-by: Johannes Obermayr <johannesobermayr@gmx.de>
Tested-by: Johannes Obermayr <johannesobermayr@gmx.de>
Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Signed-off-by: Ben Skeggs <bskeggs@redhat.com>